--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: PORT
         value: 5244
       - key: DB_TYPE
-        # value: sqlite3
+        # value: mysql
         sync: false
       - key: DB_HOST
         # value: db_host
@@ -30,6 +30,9 @@ services:
         sync: false
       - key: DB_TABLE_PREFIX
         # value: alist_
+        sync: false
+        key: DB_SSL_MODE
+        value: VERIFY_IDENTITY
         sync: false
       - key: CDN
         # value: https://npm.elemecdn.com/alist-web@$version/dist
